--- a/style.css
+++ b/style.css
@@ -8,5 +8,48 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background: lightslategray;
+  background: rgb(175, 172, 166);
+}
+.inputBox {
+  position: relative;
+  width: 450px;
+}
+.inputBox h2 {
+  font-size: 28px;
+  color: #333;
+}
+.inputBox input {
+  position: relative;
+  width: 100%;
+  height: 60px;
+  border: none;
+  margin: 15px 0 20px;
+  background: transparent;
+  outline: none;
+  padding: 0 20px;
+  font-size: 24px;
+  letter-spacing: 4px;
+  box-sizing: border-box;
+  border-radius: 8px;
+  color: #333;
+  box-shadow: -4px -4px 10px rgba(255, 255, 255, 1),
+    inset 4px 4px 10px rgba(0, 0, 0, 0.05),
+    inset -4px -4px 10px rgba(255, 255, 255, 1),
+    4px 4px 10px rgba(0, 0, 0, 0.05);
+}
+.inputBox input::placeholder {
+  letter-spacing: 0px;
+}
+.inputBox #btn {
+  position: relative;
+  cursor: pointer;
+  color: rgb(126, 107, 107);
+  background: #333;
+  font-size: 24px;
+  display: inline-block;
+  padding: 10px 15px;
+  border-radius: 8px;
+}
+.inputBox #btn:active {
+  background: #9c27b0;
 }
